--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,11 @@ en:
       submission:
         submission_files:
           filename: 'File'
+  errors:
+    messages:
+      wrong_size: "is the wrong size (should be %{file_size})"
+      size_too_small: "is too small (should be at least %{file_size})"
+      size_too_big: "is too big (should be at most %{file_size})"
   flash:
     actions:
       create:
